--- a/styles.css
+++ b/styles.css
@@ -462,7 +462,7 @@ header {
 /* cta final */
 
 .final-cta {
-  background: url("/assets/images/") no-repeat center center/cover;
+  background: url("img/bg/elevacion.jpg") no-repeat center center/cover;
   padding: 90px 40px;
   text-align: center;
   color: #fff;
